# pinguim-norma

./: .gitignore  Cargo.toml  README.md  common_styles.css  communication.js  execution.html  index.html  rustfmt.toml
.github/workflows/: check.yml
Lambda/: execution.html  index.html  script.js  styles.css
Norma/: common_styles.css  communication.js  execution.html  index.html  script.js  styles.css
Norma/norma/: Cargo.toml
Norma/norma/src/: communication.rs  compiler.rs  ideias.md  instruction.rs  interpreter.rs  lexer.rs  lib.rs  machine.rs  norma.rs  register.rs  token.rs
Norma/norma/src/compiler/: ast.rs  error.rs  expansor.rs  instruction.rs  lexer.rs  main.rs  parser.rs  token.rs
Norma/norma/src/compiler/expansor/: macro_call.rs  test.rs
Norma/norma/src/compiler/lexer/: test.rs
Norma/norma/src/compiler/parser/: test.rs
Norma/norma/src/compiler/test/: greater_than_one.rs
Norma/norma/src/interpreter/: instruction.rs  program.rs  test.rs
Norma/norma/src/lexer/: test.rs
Norma/norma/src/machine/: test.rs
Norma/norma/src/norma/: test-docs.md  test.rs
Norma/scripts/: execution.js  index.js
Turing/: execution.html  index.html  script.js  styles.css
norma/: Cargo.toml
norma-wasm/: Cargo.toml
norma-wasm/src/: lib.rs
norma/src/: communication.rs  compiler.rs  ideias.md  interpreter.rs  lib.rs  machine.rs
norma/src/compiler/: ast.rs  error.rs  expansor.rs  lexer.rs  parser.rs  position.rs  test.rs
norma/src/compiler/expansor/: artifacts.rs  error.rs  label.rs  macro_call.rs  test.rs
norma/src/compiler/lexer/: error.rs  test.rs  token.rs
norma/src/compiler/parser/: ast.rs  error.rs  test.rs
norma/src/compiler/test/: greater_than_one.rs  one_plus_is_zero.rs
norma/src/interpreter/: program.rs  test.rs
norma/src/machine/: test.rs
norma/tests/: log2.rs  modtuple.rs
www/: common.js  common_styles.css  execution.html  execution.js  index.html  index.js  package-lock.json  package.json  styles.css  webpack.config.js
