[package]
name = "norma"
version = "0.1.0"
authors = ["Jordi Pujol Ricarte <jpricarte@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
num-bigint = "0.4"
num-traits = "0.2"

[profile.release]
lto = true